# tellme

./: Cargo.toml  LICENSE  README.md  install.sh  tellme.zsh  uninstall.sh
.github/workflows/: release.yml
scripts/: install-dev.sh  install.sh  uninstall.sh
src/: app.rs  capture.rs  config.rs  filter.rs  main.rs
tests/: cli_tests.rs
zsh/: tellme.zsh
