[package]
name = "tellme"
version = "0.3.0"
edition = "2024"
description = "Terminal black box - capture and preserve terminal output"
authors = ["windlx"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4"
colored = "3.1.1"
strip-ansi-escapes = "0.2.1"
dirs = "6.0.0"
arboard = { version = "3.6.1", features = ["wayland-data-control"] }

[dev-dependencies]
assert_cmd = "2.1.2"
once_cell = "1.21.3"
predicates = "3.1.3"
tempfile = "3.24.0"
